--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,7 @@ cycler=0.9.0=py27_0
 fontconfig=2.11.1=5
 freetype=2.5.5=0
 gensim=0.12.2=np110py27_0
+jupyter=1.0.0
 libgfortran=1.0=0
 libpng=1.6.17=0
 libxml2=2.9.2=0
