--- a/environment.yaml
+++ b/environment.yaml
@@ -26,6 +26,7 @@ pytz=2015.7=py27_0
 qt=4.8.7=1
 readline=6.2=2
 scipy=0.16.1=np110py27_0
+scikit-learn=0.17
 seaborn=0.6.0=np110py27_0
 setuptools=19.1.1=py27_0
 simplejson=3.8.0=py27_0
